--- a/Hafleti/app/src/main/res/layout/activity_spectacle_details.xml
+++ b/Hafleti/app/src/main/res/layout/activity_spectacle_details.xml
@@ -22,6 +22,14 @@
             android:textSize="24sp"
             android:padding="16dp"/>
 
+        <TextView
+            android:id="@+id/descriptionSpectacle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:padding="16dp"/>
+
+
         <!-- Liste des lieux/dates -->
         <TextView
             android:text="Lieux disponibles :"
