--- a/Hafleti/app/src/main/res/layout/item_representation.xml
+++ b/Hafleti/app/src/main/res/layout/item_representation.xml
@@ -1,11 +1,14 @@
-<androidx.cardview.widget.CardView
+<com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="12dp"
     card_view:cardCornerRadius="12dp"
-    card_view:cardElevation="4dp">
+    card_view:cardElevation="4dp"
+    card_view:strokeWidth="4dp"
+    card_view:strokeColor="@android:color/transparent">
 
     <LinearLayout
         android:orientation="vertical"
@@ -44,12 +47,5 @@
             android:text="Date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
-
-        <TextView
-            android:id="@+id/tvHeure"
-            android:text="Heure"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
     </LinearLayout>
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
