--- a/Hafleti/app/src/main/res/values/styles.xml
+++ b/Hafleti/app/src/main/res/values/styles.xml
@@ -7,5 +7,11 @@
         <item name="android:backgroundTint">#FF6F00</item>
 
     </style>
+    <style name="CustomAlertDialog" parent="ThemeOverlay.AppCompat.Dialog.Alert">
+        <item name="android:background">?attr/selectableItemBackground</item>
+        <item name="android:padding">20dp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+
 
 </resources>
